--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http_parser: ^4.0.0
   asn1lib: ^1.0.0
   collection: ^1.14.13
+  clock: ^1.1.1
 
 dev_dependencies:
   test: ^1.24.4
